--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,8 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: testapp_development
+  database: Nick
   pool: 5
-  username: postgres
   password: joehorn
 
   # Connect on a TCP socket. Omitted by default since the client uses a
